update features after updating outcome

--- a/rahim_ghani_predict/dependent-variable-development.ipynb
+++ b/rahim_ghani_predict/dependent-variable-development.ipynb
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "smaller-sacrifice",
+   "id": "imperial-intake",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "worldwide-sociology",
+   "id": "average-scratch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "orange-parade",
+   "id": "strategic-smith",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "reverse-leather",
+   "id": "latter-channels",
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "minor-concrete",
+   "id": "biblical-swaziland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "executed-conjunction",
+   "id": "weighted-russia",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "impossible-statistics",
+   "id": "searching-chapel",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "hearing-width",
+   "id": "circular-titanium",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "intermediate-check",
+   "id": "fifteen-argentina",
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "human-pocket",
+   "id": "split-mauritius",
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "departmental-thesaurus",
+   "id": "parallel-thumbnail",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "funny-livestock",
+   "id": "driving-liquid",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "tender-prescription",
+   "id": "tribal-american",
    "metadata": {},
    "outputs": [
     {
@@ -1295,7 +1295,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "charming-gazette",
+   "id": "seven-marking",
    "metadata": {},
    "outputs": [
     {
@@ -1763,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "becoming-sleeve",
+   "id": "linear-theater",
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2416,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "outside-ready",
+   "id": "current-european",
    "metadata": {},
    "outputs": [
     {
@@ -2759,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "champion-oxide",
+   "id": "floppy-johnson",
    "metadata": {},
    "outputs": [
     {
@@ -3139,7 +3139,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "determined-sierra",
+   "id": "sized-channel",
    "metadata": {},
    "outputs": [
     {
@@ -3286,7 +3286,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "signed-efficiency",
+   "id": "indian-terrorism",
    "metadata": {},
    "outputs": [
     {
@@ -3709,7 +3709,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "spare-relaxation",
+   "id": "present-chrome",
    "metadata": {},
    "outputs": [
     {
@@ -3856,7 +3856,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "willing-solid",
+   "id": "verified-eleven",
    "metadata": {},
    "outputs": [
     {
@@ -4229,7 +4229,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "institutional-headline",
+   "id": "fancy-weekend",
    "metadata": {},
    "outputs": [
     {
@@ -4257,7 +4257,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "floppy-effectiveness",
+   "id": "micro-james",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4272,7 +4272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "dangerous-architect",
+   "id": "present-cloud",
    "metadata": {},
    "outputs": [
     {
@@ -4441,7 +4441,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "super-thriller",
+   "id": "cellular-vaccine",
    "metadata": {},
    "outputs": [
     {
@@ -4462,7 +4462,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "spiritual-manchester",
+   "id": "binary-robertson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4475,7 +4475,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "beginning-split",
+   "id": "blond-commonwealth",
    "metadata": {},
    "outputs": [
     {
@@ -4496,7 +4496,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "adult-armor",
+   "id": "champion-finnish",
    "metadata": {},
    "outputs": [
     {
@@ -4521,7 +4521,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "further-eating",
+   "id": "ranking-innocent",
    "metadata": {},
    "outputs": [
     {
@@ -4759,8 +4759,269 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 90,
+   "id": "talented-heritage",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>state_code</th>\n",
+       "      <th>region</th>\n",
+       "      <th>city</th>\n",
+       "      <th>investment_type</th>\n",
+       "      <th>announced_on</th>\n",
+       "      <th>raised_amount_usd</th>\n",
+       "      <th>raised_amount</th>\n",
+       "      <th>raised_amount_currency_code</th>\n",
+       "      <th>post_money_valuation_usd</th>\n",
+       "      <th>post_money_valuation</th>\n",
+       "      <th>post_money_valuation_currency_code</th>\n",
+       "      <th>investor_count</th>\n",
+       "      <th>org_uuid</th>\n",
+       "      <th>org_name</th>\n",
+       "      <th>lead_investor_uuids</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>funding_round_uuid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8a945939-18e0-cc9d-27b9-bf33817b2818</th>\n",
+       "      <td>Angel Round - Facebook</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Menlo Park</td>\n",
+       "      <td>angel</td>\n",
+       "      <td>2004-09-01</td>\n",
+       "      <td>500000.0</td>\n",
+       "      <td>500000.0</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>df662812-7f97-0b43-9d3e-12f64f504fbb</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>3f47be49-2e32-8118-01a0-31685a4d0fd7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d950d7a5-79ff-fb93-ca87-13386b0e2feb</th>\n",
+       "      <td>Series A - Facebook</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Menlo Park</td>\n",
+       "      <td>series_a</td>\n",
+       "      <td>2005-05-01</td>\n",
+       "      <td>12700000.0</td>\n",
+       "      <td>12700000.0</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>98000000.0</td>\n",
+       "      <td>98000000.0</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>df662812-7f97-0b43-9d3e-12f64f504fbb</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>b08efc27-da40-505a-6f9d-c9e14247bf36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6fae3958-a001-27c0-fb7e-666266aedd78</th>\n",
+       "      <td>Series B - Facebook</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Menlo Park</td>\n",
+       "      <td>series_b</td>\n",
+       "      <td>2006-04-01</td>\n",
+       "      <td>27500000.0</td>\n",
+       "      <td>27500000.0</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>502500000.0</td>\n",
+       "      <td>502500000.0</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>df662812-7f97-0b43-9d3e-12f64f504fbb</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>e2006571-6b7a-e477-002a-f7014f48a7e3,8d5c7e48-...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                        name country_code  \\\n",
+       "funding_round_uuid                                                          \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818  Angel Round - Facebook          USA   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb     Series A - Facebook          USA   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78     Series B - Facebook          USA   \n",
+       "\n",
+       "                                     state_code      region        city  \\\n",
+       "funding_round_uuid                                                        \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818         CA  California  Menlo Park   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb         CA  California  Menlo Park   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78         CA  California  Menlo Park   \n",
+       "\n",
+       "                                     investment_type announced_on  \\\n",
+       "funding_round_uuid                                                  \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818           angel   2004-09-01   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb        series_a   2005-05-01   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78        series_b   2006-04-01   \n",
+       "\n",
+       "                                      raised_amount_usd  raised_amount  \\\n",
+       "funding_round_uuid                                                       \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818           500000.0       500000.0   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb         12700000.0     12700000.0   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78         27500000.0     27500000.0   \n",
+       "\n",
+       "                                     raised_amount_currency_code  \\\n",
+       "funding_round_uuid                                                 \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818                         USD   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb                         USD   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78                         USD   \n",
+       "\n",
+       "                                      post_money_valuation_usd  \\\n",
+       "funding_round_uuid                                               \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818                       NaN   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb                98000000.0   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78               502500000.0   \n",
+       "\n",
+       "                                      post_money_valuation  \\\n",
+       "funding_round_uuid                                           \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818                   NaN   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb            98000000.0   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78           502500000.0   \n",
+       "\n",
+       "                                     post_money_valuation_currency_code  \\\n",
+       "funding_round_uuid                                                        \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818                                NaN   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb                                USD   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78                                USD   \n",
+       "\n",
+       "                                      investor_count  \\\n",
+       "funding_round_uuid                                     \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818             4.0   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb             4.0   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78             5.0   \n",
+       "\n",
+       "                                                                  org_uuid  \\\n",
+       "funding_round_uuid                                                           \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818  df662812-7f97-0b43-9d3e-12f64f504fbb   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb  df662812-7f97-0b43-9d3e-12f64f504fbb   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78  df662812-7f97-0b43-9d3e-12f64f504fbb   \n",
+       "\n",
+       "                                      org_name  \\\n",
+       "funding_round_uuid                               \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818  Facebook   \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb  Facebook   \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78  Facebook   \n",
+       "\n",
+       "                                                                    lead_investor_uuids  \n",
+       "funding_round_uuid                                                                       \n",
+       "8a945939-18e0-cc9d-27b9-bf33817b2818               3f47be49-2e32-8118-01a0-31685a4d0fd7  \n",
+       "d950d7a5-79ff-fb93-ca87-13386b0e2feb               b08efc27-da40-505a-6f9d-c9e14247bf36  \n",
+       "6fae3958-a001-27c0-fb7e-666266aedd78  e2006571-6b7a-e477-002a-f7014f48a7e3,8d5c7e48-...  "
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funding_rounds_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "floating-facility",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['name', 'country_code', 'state_code', 'region', 'city',\n",
+       "       'investment_type', 'announced_on', 'raised_amount_usd', 'raised_amount',\n",
+       "       'raised_amount_currency_code', 'post_money_valuation_usd',\n",
+       "       'post_money_valuation', 'post_money_valuation_currency_code',\n",
+       "       'investor_count', 'org_uuid', 'org_name', 'lead_investor_uuids'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "funding_rounds_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "analyzed-working",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37450"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(funding_rounds_df['lead_investor_uuids'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "latest-wrist",
+   "id": "critical-platinum",
    "metadata": {},
    "outputs": [],
    "source": []
