--- a/rahim_ghani_predict/features-development-network.ipynb
+++ b/rahim_ghani_predict/features-development-network.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "#import outcome file with org_uuid\n",
-    "main_df = pd.read_csv(R\"d:/msc-project/data/final/outcome_final.csv\",encoding='utf-8',\n",
+    "main_df = pd.read_csv(R\"d:/msc-project/data/final/outcome_final_v1.csv\",encoding='utf-8',\n",
     "                         parse_dates= ['founded_on','seed_date','series_a_date','series_b_date','series_c_date'])\n",
     "main_processing_df = main_df[['org_uuid','name','outcome']]"
    ]
@@ -439,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "(76806, 6)"
+       "(32632, 6)"
       ]
      },
      "execution_count": 10,
@@ -489,17 +489,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>00107fd1-b65b-85cd-7d60-c00c4b2ae2fb</td>\n",
-       "      <td>CloudAptitude</td>\n",
+       "      <td>eb37f7c8-c036-a915-bb7c-63f445330f66</td>\n",
+       "      <td>Ceyba</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0013719b-13cb-9419-c604-597100dd642f</td>\n",
-       "      <td>Win Win Slots</td>\n",
+       "      <td>0a88fa0e-7abe-c4ac-ab69-877b01a9cb60</td>\n",
+       "      <td>IceFyre Semiconductor</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -507,71 +507,71 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>001c3ed9-6eb1-63b6-eeba-dcdb97f9444f</td>\n",
-       "      <td>PetaData Labs SocialDNA</td>\n",
+       "      <td>de462c42-b0a5-c5af-9637-ec426b4e991f</td>\n",
+       "      <td>ORMvision</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>002194d5-e7cf-cc78-86ca-4213f8edf62b</td>\n",
-       "      <td>Smart Lanes</td>\n",
+       "      <td>46e0c7e4-64a3-f67e-2be2-6e707d6d5a51</td>\n",
+       "      <td>Xan3D Technologies</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>002542fe-a20c-aab2-1bcf-6f495fac9ab1</td>\n",
-       "      <td>Clay Piggy</td>\n",
+       "      <td>89d81ccd-1b5d-4adb-1bcc-312ab6e4f90d</td>\n",
+       "      <td>Photonic Materials</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>002f3cd0-9655-4f2d-834f-af6fc7a8a437</td>\n",
-       "      <td>Kids on 45th</td>\n",
+       "      <td>1b923b7c-b415-a83c-cbcc-53b27c877907</td>\n",
+       "      <td>NanoInk</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>004a5400-2048-bd32-4387-4b7d3db21dde</td>\n",
-       "      <td>piALGO Technologies</td>\n",
+       "      <td>88206b5f-eefe-e06c-5a84-0dedd98dd529</td>\n",
+       "      <td>Sorrent, Inc</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>004c2baa-36be-4d84-8731-5418ce248ab5</td>\n",
-       "      <td>Altitude Products</td>\n",
+       "      <td>91f5ca18-e026-9482-8e4f-22593943e0f5</td>\n",
+       "      <td>Plaxo</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>004dcb71-74c2-f566-56e1-d6a503f675a1</td>\n",
-       "      <td>Divvy</td>\n",
+       "      <td>3d607a21-39bb-651e-c53f-9890ee334f18</td>\n",
+       "      <td>Ygnition Networks</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>00572f97-a71a-912f-33ff-53e630513374</td>\n",
-       "      <td>Soundhawk Corporation</td>\n",
+       "      <td>ab272c7d-735f-8ff7-d5b6-009ac6d91792</td>\n",
+       "      <td>Celite Systems</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -582,28 +582,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                               org_uuid                     name  outcome  \\\n",
-       "0  00107fd1-b65b-85cd-7d60-c00c4b2ae2fb            CloudAptitude        0   \n",
-       "1  0013719b-13cb-9419-c604-597100dd642f            Win Win Slots        0   \n",
-       "2  001c3ed9-6eb1-63b6-eeba-dcdb97f9444f  PetaData Labs SocialDNA        0   \n",
-       "3  002194d5-e7cf-cc78-86ca-4213f8edf62b              Smart Lanes        0   \n",
-       "4  002542fe-a20c-aab2-1bcf-6f495fac9ab1               Clay Piggy        0   \n",
-       "5  002f3cd0-9655-4f2d-834f-af6fc7a8a437             Kids on 45th        0   \n",
-       "6  004a5400-2048-bd32-4387-4b7d3db21dde      piALGO Technologies        0   \n",
-       "7  004c2baa-36be-4d84-8731-5418ce248ab5        Altitude Products        0   \n",
-       "8  004dcb71-74c2-f566-56e1-d6a503f675a1                    Divvy        0   \n",
-       "9  00572f97-a71a-912f-33ff-53e630513374    Soundhawk Corporation        0   \n",
+       "                               org_uuid                   name  outcome  \\\n",
+       "0  eb37f7c8-c036-a915-bb7c-63f445330f66                  Ceyba        0   \n",
+       "1  0a88fa0e-7abe-c4ac-ab69-877b01a9cb60  IceFyre Semiconductor        0   \n",
+       "2  de462c42-b0a5-c5af-9637-ec426b4e991f              ORMvision        0   \n",
+       "3  46e0c7e4-64a3-f67e-2be2-6e707d6d5a51     Xan3D Technologies        0   \n",
+       "4  89d81ccd-1b5d-4adb-1bcc-312ab6e4f90d     Photonic Materials        0   \n",
+       "5  1b923b7c-b415-a83c-cbcc-53b27c877907                NanoInk        0   \n",
+       "6  88206b5f-eefe-e06c-5a84-0dedd98dd529           Sorrent, Inc        0   \n",
+       "7  91f5ca18-e026-9482-8e4f-22593943e0f5                  Plaxo        0   \n",
+       "8  3d607a21-39bb-651e-c53f-9890ee334f18      Ygnition Networks        0   \n",
+       "9  ab272c7d-735f-8ff7-d5b6-009ac6d91792         Celite Systems        0   \n",
        "\n",
        "   facebook_url  linkedin_url  twitter_url  \n",
-       "0             1             0            1  \n",
+       "0             0             0            0  \n",
        "1             0             0            0  \n",
-       "2             0             0            1  \n",
-       "3             1             1            1  \n",
-       "4             1             1            1  \n",
-       "5             1             1            0  \n",
-       "6             0             0            1  \n",
-       "7             1             1            1  \n",
-       "8             1             0            1  \n",
+       "2             0             0            0  \n",
+       "3             0             0            0  \n",
+       "4             0             0            0  \n",
+       "5             0             0            1  \n",
+       "6             0             0            0  \n",
+       "7             0             1            1  \n",
+       "8             0             0            0  \n",
        "9             0             0            0  "
       ]
      },
@@ -802,7 +802,7 @@
     {
      "data": {
       "text/plain": [
-       "(76806, 188)"
+       "(32632, 188)"
       ]
      },
      "execution_count": 14,
@@ -871,12 +871,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>00107fd1-b65b-85cd-7d60-c00c4b2ae2fb</td>\n",
-       "      <td>CloudAptitude</td>\n",
+       "      <td>eb37f7c8-c036-a915-bb7c-63f445330f66</td>\n",
+       "      <td>Ceyba</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -884,7 +884,7 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -895,8 +895,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0013719b-13cb-9419-c604-597100dd642f</td>\n",
-       "      <td>Win Win Slots</td>\n",
+       "      <td>0a88fa0e-7abe-c4ac-ab69-877b01a9cb60</td>\n",
+       "      <td>IceFyre Semiconductor</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -908,7 +908,7 @@
        "      <td>...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -919,12 +919,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>001c3ed9-6eb1-63b6-eeba-dcdb97f9444f</td>\n",
-       "      <td>PetaData Labs SocialDNA</td>\n",
+       "      <td>de462c42-b0a5-c5af-9637-ec426b4e991f</td>\n",
+       "      <td>ORMvision</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -947,19 +947,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                               org_uuid                     name  outcome  \\\n",
-       "0  00107fd1-b65b-85cd-7d60-c00c4b2ae2fb            CloudAptitude        0   \n",
-       "1  0013719b-13cb-9419-c604-597100dd642f            Win Win Slots        0   \n",
-       "2  001c3ed9-6eb1-63b6-eeba-dcdb97f9444f  PetaData Labs SocialDNA        0   \n",
+       "                               org_uuid                   name  outcome  \\\n",
+       "0  eb37f7c8-c036-a915-bb7c-63f445330f66                  Ceyba        0   \n",
+       "1  0a88fa0e-7abe-c4ac-ab69-877b01a9cb60  IceFyre Semiconductor        0   \n",
+       "2  de462c42-b0a5-c5af-9637-ec426b4e991f              ORMvision        0   \n",
        "\n",
        "   facebook_url  linkedin_url  twitter_url  is_abw  is_afg  is_ago  is_aia  \\\n",
-       "0             1             0            1       0       0       0       0   \n",
+       "0             0             0            0       0       0       0       0   \n",
        "1             0             0            0       0       0       0       0   \n",
-       "2             0             0            1       0       0       0       0   \n",
+       "2             0             0            0       0       0       0       0   \n",
        "\n",
        "   ...  is_ukr  is_ury  is_usa  is_uzb  is_ven  is_vnm  is_yem  is_zaf  \\\n",
-       "0  ...       0       0       1       0       0       0       0       0   \n",
-       "1  ...       0       0       1       0       0       0       0       0   \n",
+       "0  ...       0       0       0       0       0       0       0       0   \n",
+       "1  ...       0       0       0       0       0       0       0       0   \n",
        "2  ...       0       0       0       0       0       0       0       0   \n",
        "\n",
        "   is_zmb  is_zwe  \n",
@@ -1134,11 +1134,11 @@
        "746dad2c-783e-2234-f4e9-f83cdfdb28db    1627\n",
        "55bf117e-47b1-4578-99e2-0f22f9d364d2    1408\n",
        "                                        ... \n",
-       "b12cdfff-85f8-4c44-a659-937353f8f8c9     100\n",
-       "f9a3bab5-94d4-4f85-8930-a607020134d7     100\n",
-       "cfe55b5a-08eb-4fe9-b43c-ac4b729cf939     100\n",
        "470ef7cb-2e0d-4301-a6dc-dff607069040     100\n",
-       "f53d4850-4c40-10ca-d6ca-bf69eb3e0ac9     100\n",
+       "8f539ef2-1da2-4b9d-b95f-22ed48ec9548     100\n",
+       "ff408e8a-2300-4fc7-8867-3ad47d7beeec     100\n",
+       "b12cdfff-85f8-4c44-a659-937353f8f8c9     100\n",
+       "67669e04-13d6-606f-c269-b032e47592ac     100\n",
        "Name: event_uuid, Length: 1000, dtype: int64"
       ]
      },
@@ -1380,19 +1380,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>00107fd1-b65b-85cd-7d60-c00c4b2ae2fb</td>\n",
-       "      <td>CloudAptitude</td>\n",
+       "      <td>eb37f7c8-c036-a915-bb7c-63f445330f66</td>\n",
+       "      <td>Ceyba</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1404,8 +1404,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0013719b-13cb-9419-c604-597100dd642f</td>\n",
-       "      <td>Win Win Slots</td>\n",
+       "      <td>0a88fa0e-7abe-c4ac-ab69-877b01a9cb60</td>\n",
+       "      <td>IceFyre Semiconductor</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1416,7 +1416,7 @@
        "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1428,12 +1428,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>001c3ed9-6eb1-63b6-eeba-dcdb97f9444f</td>\n",
-       "      <td>PetaData Labs SocialDNA</td>\n",
+       "      <td>de462c42-b0a5-c5af-9637-ec426b4e991f</td>\n",
+       "      <td>ORMvision</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1456,19 +1456,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                               org_uuid                     name  outcome  \\\n",
-       "0  00107fd1-b65b-85cd-7d60-c00c4b2ae2fb            CloudAptitude        0   \n",
-       "1  0013719b-13cb-9419-c604-597100dd642f            Win Win Slots        0   \n",
-       "2  001c3ed9-6eb1-63b6-eeba-dcdb97f9444f  PetaData Labs SocialDNA        0   \n",
+       "                               org_uuid                   name  outcome  \\\n",
+       "0  eb37f7c8-c036-a915-bb7c-63f445330f66                  Ceyba        0   \n",
+       "1  0a88fa0e-7abe-c4ac-ab69-877b01a9cb60  IceFyre Semiconductor        0   \n",
+       "2  de462c42-b0a5-c5af-9637-ec426b4e991f              ORMvision        0   \n",
        "\n",
        "   facebook_url  linkedin_url  twitter_url  is_abw  is_afg  is_ago  is_aia  \\\n",
-       "0             1             0            1       0       0       0       0   \n",
+       "0             0             0            0       0       0       0       0   \n",
        "1             0             0            0       0       0       0       0   \n",
-       "2             0             0            1       0       0       0       0   \n",
+       "2             0             0            0       0       0       0       0   \n",
        "\n",
        "   ...  is_ury  is_usa  is_uzb  is_ven  is_vnm  is_yem  is_zaf  is_zmb  \\\n",
-       "0  ...       0       1       0       0       0       0       0       0   \n",
-       "1  ...       0       1       0       0       0       0       0       0   \n",
+       "0  ...       0       0       0       0       0       0       0       0   \n",
+       "1  ...       0       0       0       0       0       0       0       0   \n",
        "2  ...       0       0       0       0       0       0       0       0   \n",
        "\n",
        "   is_zwe  is_attend_top1000_event  \n",
